# LearningRust

./: CHANGELOG.md  README.md
batcher/: .gitignore  Cargo.toml
batcher/downloads/: kali-linux-2023-W14-installer-amd64.iso  kali-linux-2023.1-installer-amd64.iso  ubuntu-22.10-desktop-amd64.iso  words.txt
batcher/src/: console.rs  main.rs  prime.rs  tests.rs  threaded_queue.rs
spotigit/: .gitignore  Cargo.toml
spotigit/src/: data.rs  helpers.rs  main.rs
