[package]
name = "batcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
indicatif = "0.17.3"
rand = "0.8.5"
reqwest = "0.11.16"
sqlite = "0.30.4"
tokio = {version = "1.27.0", features = ["full"] }
url = "2.3.1"
