[package]
name = "spotigit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
console = "0.15.5"
dialoguer = "0.10.4"
futures = "0.3.28"
regex = "1.7.3"
rspotify = "0.11.6"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
